# Sablefish

./: .gitignore  Bitboard.cpp  Bitboard.hpp  Bitfields.cpp  Bitfields.hpp  Board.cpp  Board.hpp  CMakeLists.txt  Constants.hpp  LICENSE  Main.cpp  Piece.cpp  Piece.hpp  README.md  Square.cpp  Square.hpp  Utilities.cpp  Utilities.hpp
apps/: CMakeLists.txt  Main.cpp
include/sablefish/: Bitboard.hpp  Board.hpp  Constants.hpp  Game.hpp  Move.hpp  MoveGenerator.hpp  Piece.hpp  Player.hpp  Square.hpp  Utilities.hpp
src/: Board.cpp  CMakeLists.txt  Game.cpp  Move.cpp  MoveGenerator.cpp  Piece.cpp  Player.cpp  Square.cpp  Utilities.cpp
test/: CMakeLists.txt  MoveGeneratorTest.cpp  PieceTest.cpp  PrecomputedMoveGenerationTest.cpp  TestBoard.cpp  TestConversions.cpp  TestMoveGeneration.cpp  TestMoveGenerator.cpp  TestPiece.cpp  TestPlayer.cpp  TestSquare.cpp
test/include/: TestBoard.hpp
test/unit/: BoardTest.cpp  CMakeLists.txt  ConversionsTest.cpp  GameTest.cpp  MoveGeneratorTest.cpp  MoveTest.cpp  PlayerTest.cpp  PrecomputedMoveGenerationTest.cpp  SquareTest.cpp  ToStringTest.cpp
